Fixed chess piece image alignment

--- a/public/main-css.css
+++ b/public/main-css.css
@@ -103,13 +103,10 @@ body {
 }
 
 .tile {
-	width: 60px;
-	height: 60px;
 	float: left;
-	text-align: center;
-	padding: 10px;
-	font-size: 14px;
-	line-height: 56px;
+	width: 46px;
+	height: 46px;
+	padding: 17px;
 }
 
 .white.tile {
@@ -124,16 +121,12 @@ body {
 
 .hover.tile {
 	border: 4px solid #808080;
-	width: 52px;
-	height: 52px;
-	line-height: 48px;
+	padding: 13px;
 }
 
 .selected.tile {
 	border: 4px solid #60b060;
-	width: 52px;
-	height: 52px;
-	line-height: 48px;
+	padding: 13px;
 }
 
 /*****/
